--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/abddfb1a86.js" crossorigin="anonymous"></script>
-<link rel="shortcut icon" href="./assets/TESTE.png" type="image/x-icon">
+<link rel="shortcut icon" href="./assets/link.png" type="image/x-icon">
   
   
   <meta charset="UTF-8">
@@ -19,8 +19,8 @@
  
   <div id="container">
     <div id="profile">
-      <img src="./assets/TESTE.png" alt="Logo de um gato verde e preto">
-      <p>@astroodev</p>
+      <img src="./assets/PhotoRoom-20250311_171409.png" alt="Logo de um gato verde e preto">
+      <p>@gustabycode</p>
     </div>
 
     <div id="switch" onclick="toggleMode()">
@@ -35,10 +35,7 @@
         <a target="_blank" href="#">Produtos (setup)</a>
       </li>
       <li>
-        <a target="_blank" href="https://meowtech.com.br/">Acessa a nossa plataforma</a>
-      </li>
-      <li>
-        <a target="_blank" href="#">Portifolio</a>
+        <a target="_blank" href="https://gustavosl1.github.io/Portifolio-Gustavo/">Portifolio</a>
       </li>
       <li>
         <a target="_blank" href="#">Repositorio</a>
@@ -46,15 +43,12 @@
     </ul>
       <p class="copy">Me siga nas Redes sociais para saber mais!</p>
     <div id="social-links">
-      <a href="https://github.com/MeoowTech" target="_blank">
+      <a href="https://github.com/Gustavosl1" target="_blank">
         <i class="fa fa-github" style="color: #ffffff;"></i>
       </a>  
-      <a href="https://www.instagram.com/meoowtech/" target="_blank">
+      <a href="https://www.instagram.com/gustabycode/" target="_blank">
       <i class="fa fa-instagram" style="color: #ffffff;"></i>
       </a>
-        <a href="https://youtube.com/@Meow_Tech" target="_blank">
-        <i class="fab fa-youtube" style="color: #ffffff;"></i>
-        </a>
       <a href="https://www.linkedin.com/in/gustavo-de-souza-lima-91a88320b/" target="_blank">
       <i class="fa fa-linkedin" style="color: #ffffff;"></i>
       </a>
